--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -6,9 +6,9 @@
     android:orientation="vertical">
 
     <View
-        android:layout_width="100dp"
+        android:layout_width="@dimen/item_width"
         android:layout_height="150dp"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/item_margin"
         android:background="@color/purple_700"/>
 
 </LinearLayout>
